@@ -17,3 +17,4 @@ nytprof.out
 /pm_to_blib
 *.o
 *.bs
+*.swp
