@@ -27,6 +27,7 @@ WriteMakefile(
 	'Test::Requires' => 0,
 	'File::Basename' => 0,
 	'String::Clean::XSS' => 0,
+	'String::EscapeCage' => 0.02,
     },
     dist		=> { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean		=> { FILES => 'CGI-Info-*' },
