@@ -4,6 +4,7 @@ Revision history for CGI-Info
 	Incorporated patch-1 from https://github.com/szabgab/CGI-Info
 	Consider Majestic12 to be a search engine
 	Only load File::Basename when needed
+	Use String::EscapeCage to taint and grab values
 
 0.47	Sun Aug 24 14:56:10 EDT 2014
 	Support hostnames with dots at the end, e.g. when the URL used to
